--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
         "webpack-merge": "^5.10.0"
     },
     "dependencies": {
-        "phaser": "^3.80.1"
+        "@types/socket.io-client": "^3.0.0",
+        "express": "^4.19.2",
+        "phaser": "^3.80.1",
+        "socket.io": "^4.7.5",
+        "socket.io-client": "^4.7.5"
     }
 }
