--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.1.1",
     "main": "src/main.js",
     "scripts": {
+        "deploy": "gh-pages -d dist",
         "dev": "webpack-dev-server --config webpack/config.dev.js --open",
         "build": "webpack --config webpack/config.prod.js"
     },
@@ -24,6 +25,7 @@
         "clean-webpack-plugin": "^4.0.0",
         "copy-webpack-plugin": "^12.0.2",
         "file-loader": "^6.2.0",
+        "gh-pages": "^6.1.1",
         "html-webpack-plugin": "^5.6.0",
         "raw-loader": "^4.0.2",
         "terser-webpack-plugin": "^5.3.10",
